kubernetes/apps/default/beer/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beer
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: beer
subsets:
- addresses:
  - ip: 10.1.2.66
  ports:
  - port: 80
