kubernetes/apps/default/beer/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: external-service
spec:
  rules:
  - host: beer.brewcode.xyz
    http:
      paths:
      - backend:
          serviceName: external-ip
          servicePort: 80
        path: /
